* src/gnome/glade/account.glade: Increase height of 	  account-hierarchy druid.
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8018 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-22  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome/glade/account.glade: Increase height of
+	  account-hierarchy druid.
+
 2003-02-22  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/dialog-hbcitrans.c: Quick fix to avoid
