Don't override the user's toolbar style preference by calling gtk_widget_show_all() on the toolbar.  #102041
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8021 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-22  David Hampton  <hampton@employees.org>
+
+	* src/gnome/window-register.c: Don't override the user's toolbar
+	style preference by calling gtk_widget_show_all() on the toolbar.
+	#102041
+
 2003-02-22  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome/glade/account.glade: Increase height of
