--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-02-26  Benoit Grégoire  <bock@step.polymtl.ca>
+
+	* src/import-export/import-backend.c: Pull from HEAD
+	-Disable -3 punishment for transactions which have an online ID.  This punished credit card transfer yet added no tangible benefit.
+
+2003-02-26  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add config.rpath.
+	* configure.in (AC_OUTPUT): Add intl/Makefile,
+
 2003-02-22  David Hampton  <hampton@employees.org>
 
 	* src/gnome/window-register.c: Don't override the user's toolbar
