* re-add macros/gnome.m4 for GNOME_INIT 	* configure.in: re-add call to GNOME_INIT
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/gnucash-gnome2-dev@8025 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-27   Derek Atkins  <derek@ihtfp.com>
+
+	* re-add macros/gnome.m4 for GNOME_INIT
+	* configure.in: re-add call to GNOME_INIT
+
 2003-02-18 TomF changes for Gnome-2 branch
 
 	* autogen.sh: Use Gnome2 libraries
