--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-01  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome/dialog-sxsincelast.c: make sure to resume gui refresh events
+
 2003-03-01  Christian Stimming  <stimming@tuhh.de>
 
 	* po/de.po: Updated German translation.
