2003-03-02  Christian Stimming  <stimming@tuhh.de>
	* src/import-export/import-backend.h: Pull missing prototype from
	HEAD, for gnc_import_TransInfo_refresh_destacc.


git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8031 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-02  Christian Stimming  <stimming@tuhh.de>
+
+	* src/import-export/import-backend.h: Pull missing prototype from
+	HEAD, for gnc_import_TransInfo_refresh_destacc.
+
 2003-03-01  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome/dialog-sxsincelast.c: make sure to resume gui refresh events
