update to release 1.8.1.5
git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/branches/1.8@8040 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-03  Chris Lyttle  <chris@wilddev.net>
+
+	* configure.in: change to 1.8.1.5 version
+	* src/quotes/Makefile.am: add dump-finance-quote to EXTRA_DIST
+
 2003-03-03  Derek Atkins  <derek@ihtfp.com>
 
 	* src/business/business-core/business-core.scm: don't export
